--- a/RomanNumeralsTest/RomanNumeralsTest.csproj
+++ b/RomanNumeralsTest/RomanNumeralsTest.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RomanNumeralsConsole\RomanNumeralsConsole.csproj" />
+    <ProjectReference Include="..\RomanNumeralsCore\RomanNumeralsCore.csproj" />
   </ItemGroup>
 
 </Project>
