--- a/RomanNumeralsWeb/Dockerfile
+++ b/RomanNumeralsWeb/Dockerfile
@@ -1,10 +1,8 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.9-buster-slim-arm32v7 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1.403-buster-arm32v7 AS build
 WORKDIR /src
 COPY ["RomanNumeralsWeb/RomanNumeralsWeb.csproj", "RomanNumeralsWeb/"]
 RUN dotnet restore "RomanNumeralsWeb/RomanNumeralsWeb.csproj"
